@@ -20,6 +20,7 @@
 #define IDC_FLAGS                       1012
 #define IDC_EDIT1                       1013
 #define IDC_VERSIONSTRING               1014
+#define IDC_IMAGEBASE                   1015
 
 // Next default values for new objects
 // 
@@ -27,7 +28,7 @@
 #ifndef APSTUDIO_READONLY_SYMBOLS
 #define _APS_NEXT_RESOURCE_VALUE        107
 #define _APS_NEXT_COMMAND_VALUE         40001
-#define _APS_NEXT_CONTROL_VALUE         1015
+#define _APS_NEXT_CONTROL_VALUE         1016
 #define _APS_NEXT_SYMED_VALUE           101
 #endif
 #endif
